# MyMFS

./: .gitignore  LICENSE  README.md  README_old.md
codigo-fonte/: CMakeLists.txt  main.cpp
codigo-fonte/Google_tests/: CMakeLists.txt  config.cpp  import.cpp  variaveis.h
codigo-fonte/lib/: CMakeLists.txt  comandos.cpp  utils.cpp
executaveis/: mymfs
mymfs/: CMakeLists.txt  comandos.cpp  comandos.h  mymfs.cpp  texto-test.txt
mymfs/Google_tests/: comparacoes.cpp  config.cpp  variaveis.h
mymfs/lib/: comandos.cpp  comandos.h  utils.h
